--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@expo/webpack-config": "^18.0.0",
+    "@expo/config-plugins": "^54.0.2",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "expo": "^49.0.23",
+    "expo-pwa": "^0.0.58",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^0.0.0",
+    "semver": "^7.7.3",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xml2js": "^0.6.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -38,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@expo/webpack-config": "^0.17.4",
     "@types/node": "^16.18.68"
   }
 }
